--- a/css/css/estilo.css
+++ b/css/css/estilo.css
@@ -74,6 +74,7 @@ p{
     border-radius: 10px;
     text-decoration: none;
     margin: 10px;
+    display: flex; align-items: center; justify-content: center;
 }.botao:hover{
     background: rgb(0, 184, 0);
 }
@@ -154,7 +155,7 @@ a.botao5{
 a.botaoPF{
     display: inline-block;
     margin-left: 30px;
-    background: rgb(14, 235, 14);
+    background: rgb(0, 165, 0);
     color: white;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -163,6 +164,7 @@ a.botaoPF{
     border-radius: 10px;
     text-decoration: none;
     margin: 10px;
+    display: flex; align-items: center; justify-content: center;
 }.botaoPF:hover{
-    background: rgb(0, 255, 0);
+    background: rgb(86, 196, 86);
 }
